--- a/demo1.html
+++ b/demo1.html
@@ -4,6 +4,7 @@
         <title>demo 1</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <link rel="icon" href="data:,">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
