heightmap loading improvements

--- a/demo1.html
+++ b/demo1.html
@@ -16,6 +16,9 @@
         <script src="./src/ext/three/OrbitControls.js"></script>
         <script src="./src/ext/three/stats.min.js"></script>
 
+        <script src="./src/ext/noise.js"></script>
+        
+        <script src="./src/heightmap-loading.js"></script>
         <script src="./src/demo1.js"></script>
     </body>
 </html>
