get rid of old demo; add shadows

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>carsim</title>
+        <title>demo 1</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <link rel="icon" href="data:,">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>carsim</h1>
-        <ul>
-            <li><a href="raycast-vehicle-demo.html">raycast vehicle demo</a></li>
-            <li><a href="demo1.html">demo1</a></li>
-        </ul>
+		<div id="speedometer">0.0 km/h</div>
+
+		<script src="./src/ext/ammo/ammo.js"></script>
+
+        <script src="./src/ext/three/three.min.js"></script>
+        <script src="./src/ext/three/OrbitControls.js"></script>
+        <script src="./src/ext/three/stats.min.js"></script>
+
+        <script src="./src/ext/noise.js"></script>
+        
+        <script src="./src/heightmap-loading.js"></script>
+        <script src="./src/main.js"></script>
     </body>
 </html>
