--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="./src/ext/noise.js"></script>
         
         <script src="./src/heightmap-loading.js"></script>
+        <script src="./src/setup-car.js"></script>
         <script src="./src/main.js"></script>
     </body>
 </html>
