--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
         <script src="./src/ext/noise.js"></script>
         
-        <script src="./src/heightmap-loading.js"></script>
-        <script src="./src/setup-car.js"></script>
+        <script src="./src/objects.js"></script>
+        <script src="./src/terrain.js"></script>
+        <script src="./src/car.js"></script>
         <script src="./src/main.js"></script>
     </body>
 </html>
