integrated gamepad support

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <script src="./src/ext/three/stats.min.js"></script>
 
         <script src="./src/ext/noise.js"></script>
-        
+        <script src="./src/gamepad3.js"></script>
+
         <script src="./src/objects.js"></script>
         <script src="./src/terrain.js"></script>
         <script src="./src/car.js"></script>
