added input ui to create UI overlays. added 2 implementations to see gamepad/keys input the the driving inputs that get inferred from it

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <script src="./src/ext/noise.js"></script>
         <script src="./src/gamepad3.js"></script>
+        <script src="./src/input-ui.js"></script>
 
         <script src="./src/objects.js"></script>
         <script src="./src/terrain.js"></script>
