improved virtual gamepad a lot. improved the integration of input devices

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         <script src="./src/ext/three/stats.min.js"></script>
 
         <script src="./src/ext/noise.js"></script>
+
+        <script>
+            window.controller = { x:0, y:0, b1:false };
+        </script>
+
         <script src="./src/gamepad3.js"></script>
+        <script src="./src/virtual-gamepad.js"></script>
         <script src="./src/input-ui.js"></script>
 
         <script src="./src/objects.js"></script>
