disabling noise functions. making virtual gamepad only apply to touch devices. adding C binding to toggle camera

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 		<script src="./src/ext/ammo/ammo.js"></script>
 
         <script src="./src/ext/three/three.min.js"></script>
-        <script src="./src/ext/three/OrbitControls.js"></script>
         <script src="./src/ext/three/stats.min.js"></script>
 
-        <script src="./src/ext/noise.js"></script>
+        <!-- <script src="./src/ext/noise.js"></script> -->
 
         <script>
             window.controller = { x:0, y:0, b1:false };
