mapping alternate keys (cursors); b1 and b2 now map camera and recover; minor fix in input-ui; adding original heightmap for editing in wilbur

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- <script src="./src/ext/noise.js"></script> -->
 
         <script>
-            window.controller = { x:0, y:0, b1:false };
+            window.controller = { x:0, y:0, b1:false, b2:false };
         </script>
 
         <script src="./src/gamepad3.js"></script>
