tidying up. mapped b2 to the virtual gamepad

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             window.controller = { x:0, y:0, b1:false, b2:false };
         </script>
 
-        <script src="./src/gamepad3.js"></script>
+        <script src="./src/gamepad.js"></script>
         <script src="./src/virtual-gamepad.js"></script>
         <script src="./src/input-ui.js"></script>
 
