--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-		<div id="speedometer">0.0 km/h</div>
-
 		<script src="./src/ext/ammo/ammo.js"></script>
 
         <script src="./src/ext/three/three.min.js"></script>
@@ -24,6 +22,7 @@
         <script src="./src/gamepad.js"></script>
         <script src="./src/virtual-gamepad.js"></script>
         <script src="./src/input-ui.js"></script>
+        <script src="./src/car-hud.js"></script>
 
         <script src="./src/objects.js"></script>
         <script src="./src/terrain.js"></script>
