improved chase and onboard cameras

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <script>
             window.controller = { x:0, y:0, b1:false, b2:false };
+            window.carStats = { speed: 0 };
         </script>
 
         <script src="./src/gamepad.js"></script>
